objects/vlocity_ins__QuoteLineItemRateBreakout__c.object
<CustomObject>
    <description>Represents a detailed breakout of quote line item rates per member or other sub-segment. Holds information identifying the breakout (e.g. identifies the member) and the quoted rate details specific to that segment (e.g. that member&apos;s rates). Master-detail child object of Quote.</description>
    <fields>
        <fullName>vlocity_ins__Age__c</fullName>
        <formula>vlocity_ins__CensusMemberId__r.vlocity_ins__AgeAsOfToday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Birthday__c</fullName>
        <formula>vlocity_ins__CensusMemberId__r.vlocity_ins__Birthdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalcRateProcedureName__c</fullName>
        <formula>vlocity_ins__QuoteLineItemId__r.Product2.vlocity_ins__RatingCalcProcedureName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quoted Product Rate Procedure Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CensusMemberId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Census Member</label>
        <referenceTo>vlocity_ins__GroupCensusMember__c</referenceTo>
        <relationshipLabel>Quoted Rates</relationshipLabel>
        <relationshipName>Quote_Line_Item_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Gender__c</fullName>
        <formula>TEXT(vlocity_ins__CensusMemberId__r.vlocity_ins__Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PlanCode__c</fullName>
        <formula>vlocity_ins__QuoteLineItemId__r.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quoted Product Plan Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quoted Rates</relationshipLabel>
        <relationshipName>QuoteLineItemMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quoted Rates</relationshipLabel>
        <relationshipName>Quote_Line_Item_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quoted Plan Rate Breakout</label>
    <nameField>
        <label>Rate Breakout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quoted Plan Rate Breakouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>